# rectify

./: .gitignore  AI_INTEGRATION_SUMMARY.md  README.md  RETRAIN_PROPERLY.md  TRAINING_RESULTS.md  index.html  package-lock.json  package.json  quick_train.sh  server.js  setup_ai.sh  tailwind.config.ts
backend/: .gitignore  README.md  UV_SETUP.md  app.py  debug_sensor_attrs.py  pyproject.toml  requirements.txt  test_flexlib.py  test_rsf_parse.py  test_rsf_read.py  test_rsf_read2.py
backend/data/processed/: X_test.npy  X_train.npy  X_val.npy  metadata.json  y_test.npy  y_train.npy  y_val.npy
backend/data/processed_form/: X_test.npy  X_train.npy  X_val.npy  metadata.json  y_exercise_test.npy  y_exercise_train.npy  y_exercise_val.npy  y_form_test.npy  y_form_train.npy  y_form_val.npy
backend/data/recordings/: labels.json
backend/data/recordings/dl/: Arwed_DL_Better_rsf_v1_2025-11-19_11-45-01.rsf  Arwed_DL_Worse_rsf_v1_2025-11-19_11-45-38.rsf  Jonas_DL_Better_rsf_v1_2025-11-19_10-58-48.rsf  Jonas_DL_Worse_rsf_v1_2025-11-19_10-59-52.rsf  Kiana_DL_Correct_rsf_v1_2025-11-19_11-12-10.rsf  Kiana_DL_Worse_rsf_v1_2025-11-19_11-13-18.rsf  Tom_DL_Correct_rsf_v1_2025-11-19_11-25-22.rsf  Tom_DL_Worse_rsf_v1_2025-11-19_11-26-03.rsf
backend/ml/: __init__.py  form_inference.py  generate_labels.py  inference.py  prepare_dataset.py  prepare_form_dataset.py  train_form_model.py  train_model.py
backend/ml/models/: __init__.py  form_classifier.py  sensor_classifier.py
backend/models/trained/: best_model.pth  form_model.pth  metadata.json
docs/: AI_QUICK_START.md  DATA_FORMAT.md  (+3 more)
(+51 files in other folders)
